--- a/src/App.css
+++ b/src/App.css
@@ -5,27 +5,94 @@
   text-align: center;
 }
 
+@font-face {
+  font-family: 'Skool Krash';
+  src: url('./assets/SkoolKrash.ttf') format('truetype');
+}
+
 body {
-  background-color: rgb(162, 171, 163);
+  background-color: rgb(190, 196, 197);
 }
 
 .wrapper {
   position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
 }
 
+.content {
+  flex: 1;
+  background-image: url('assets/rust.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  box-shadow: 4px 8px 8px hsl(0deg 0% 0% / 0.38);
+  border-radius: 5px;
+  min-width: 33%;
+  border-radius: 5px;
+}
+
 .header {
-  position: relative;
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .gat {
-  width: 25%;
+  width: 20%;
+}
+
+.navigation {
+  /* */
+}
+
+.navigation > ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.ca {
   position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
+  bottom: 10px;
+}
+
+.ca:hover {
+  color: black;
+}
+
+h1 {
+  font-size: 6em;
+  color: black;
+  font-family: 'Skool Krash', Courier, monospace;
+  filter: drop-shadow(1px 2px 2px hsl(0deg 0% 0% / 0.78));
+}
+
+ul {
+  padding-left: 16px;
+}
+
+li {
+  list-style-type: none;
+  margin-right: 16px;
+  font-size: 24px;
+}
+
+.link-icon {
+  position: absolute;
+  top: 150px;
+}
+
+.tg {
+  left: 35%;
+}
+
+.x {
+  right: 35%;
 }
