--- a/src/index.css
+++ b/src/index.css
@@ -15,11 +15,7 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
   text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
 }
 
 body {
@@ -28,12 +24,13 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  font-size: 16px;
+  font-size: 1.1vw;
 }
 
 h1 {
-  font-size: 4em;
+  font-size: 5vw;
   line-height: 1.1;
+  margin-top: calc((5vh * 0.5 + 5vw) / 2);
 }
 
 button {
