--- a/src/components/header.css
+++ b/src/components/header.css
@@ -14,7 +14,7 @@
 .header h1 {
   font-size: 8em;
   margin: 0;
-  filter: drop-shadow(2px 3px 3px hsl(0deg 0% 0% / 0.78));
+  filter: drop-shadow(3px 3px 3px hsl(0, 0%, 0%));
 }
 
 .header h2 {
@@ -22,5 +22,5 @@
   font-family: 'Patrick Hand', cursive;
   font-weight: 100;
   font-size: 2.1em;
-  filter: drop-shadow(2px 3px 3px hsl(0deg 0% 0% / 0.78));
+  filter: drop-shadow(3px 3px 3px hsl(0, 0%, 0%));
 }
